# dbQmlRApp

./: Analyse.qml  CMakeLists.txt  ChannelButton.qml  ChannelsSelector.qml  Data.qml  FileBrowser.qml  Filter.qml  FilterList.qml  FilteredData.qml  HWFeedbackButton.qml  Hardware.qml  Import.qml  Init.qml  Loading.qml  MyCheckBox.qml  MyTabButton.qml  Plot.qml  PlotFilters.qml  Plots.qml  PlotsHori.qml  README  RectButton.qml  Scrollbalk.qml  Tafel.qml  Welkom.qml  abstractsizeprovidertable.cpp  abstractsizeprovidertable.h  columndefinition.cpp  columndefinition.h  conanfile.txt  database.cpp  database.h  enumutilities.h  filterlistmodel.cpp  filterlistmodel.h  importer.cpp  importer.h  labels.cpp  labels.h  main.cpp  (+22 more)
R/: lines.R  main.R  pie.R  plot.R  writeImage.R
